cmake_minimum_required (VERSION 3.13)
set (BINARY "pico7219")
set (PROJ "pico2719")
set (CMAKE_C_FLAGS_RELEASE "-Wall -Wextra")
set (CMAKE_C_FLAGS_DEBUG "-g -Wall -Wextra")
include (pico_sdk_import.cmake)
project (${PROJ})
file (GLOB pico7219_src CONFIGURE_DEPENDS "pico7219/src/*.c")
pico_sdk_init()
add_executable (${BINARY} ${pico7219_src} "test/test.c")
target_include_directories (${BINARY} PUBLIC pico7219/include)
target_include_directories (${BINARY} PUBLIC ${PROJECT_SOURCE_DIR})
pico_enable_stdio_usb (${BINARY} 1)
pico_enable_stdio_uart (${BINARY} 0)
pico_add_extra_outputs (${BINARY})
if (PICO_ON_DEVICE)
target_link_libraries (${BINARY} pico_stdlib hardware_spi hardware_gpio)
else()
target_link_libraries (${BINARY} pico_stdlib)
endif()

